[tool.poetry]
name = "othello-socket-io"
version = "0.1.0"
description = "socket.io service of othello"
authors = ["noracami <kerke.2011@gmail.com>"]
readme = "README.md"
packages = [{include = "othello_socket_io"}]

[tool.poetry.dependencies]
python = "^3.11"
flask = "^3.0.3"
redis = "^5.0.3"
python-socketio = "^5.11.2"
gunicorn = "^21.2.0"


[tool.poetry.group.dev.dependencies]
black = "^24.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
